# freenet-temp

./: Cargo.toml
contracts/publish_contract/: Cargo.toml  compile_tests.sh
contracts/publish_contract/src/: delta.rs  lib.rs  parameters.rs  state.rs  state_summary.rs
crates/locutus-stdlib/src/: interface.rs
