[package]
name = "publish-contract"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
resolver = "2"

[dependencies]
locutus-stdlib = { path = "../../crates/locutus-stdlib" }
rsa = { version = "0.6.1", features = ["serde"]}
rmp = "^0.8"
rmp-serde = "1.1.0"
serde = "^1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'

#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "link-arg=--import-memory"]
